Changes as per Jeff+Matt. Fix visual spacing after text block area changes. Update tests. NuPIC version bump. Merge in mainline changes. Update sitemap.

--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -11,8 +11,8 @@
 
   // logo
   img {
-    height: 100px;
-    width:  110px;
+    height: 150px;
+    width:  165px;
   }
 
   h2 {
